force-app/main/default/objects/clofor_com_cfs__KickbackPayReq__c/fields/clofor_com_cfs__KickbackID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KickbackID__c</fullName>
    <label>KICKBACK ID</label>
    <referenceTo>clofor_com_cfs__Kickback__c</referenceTo>
    <relationshipName>KickbackPayReq</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>