force-app/main/default/objects/clofor_com_cfs__KickbackPayReq__c/fields/clofor_com_cfs__KickbackUnpaidBalanceUSDPayReq__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KickbackUnpaidBalanceUSDPayReq__c</fullName>
    <label>KICKBACK UNPAID BAL(USD)-PAY REQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>