force-app/main/default/objects/clofor_com_cfs__KickbackPayReq__c/fields/clofor_com_cfs__PaymentRequestID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentRequestID__c</fullName>
    <label>PAYMENT REQUEST ID</label>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipName>KickbackPayReq</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>