force-app/main/default/objects/clofor_com_cfs__KickbackPayReq__c/fields/clofor_com_cfs__UnpaidBalanceOfKickbackLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfKickbackLocalFormu__c</fullName>
    <formula>clofor_com_cfs__KickbackID__r.clofor_com_cfs__UnpaidBalance__c</formula>
    <label>UNPAID BALANCE OF KICKBACK(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>